# FairyGUI-cocos2dx-runtime

./: CMakeLists.txt  GComponent.cpp  GGraph.cpp  GGraph.h  GList.cpp  GLoader3D.cpp  GObject.cpp  GProgressBar.cpp  GRoot.cpp  GRoot.h  GSlider.cpp  GTextField.h  LICENSE  README.md  ScrollPane.cpp  TranslationHelper.cpp  UIObjectFactory.cpp  UIPackage.cpp  UIPackage.h  Window.cpp  Window.h  lua_fairygui.cpp
display/: FUILabel.cpp  FUILabel.h  FUIRichText.cpp  TextFormat.cpp  TextFormat.h
event/: InputEvent.h  InputProcessor.cpp
utils/html/: HtmlParser.cpp
